Rough version of the project template is complete. Need to fix sizing and spacing etc

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@ body {
     margin-bottom: 2rem;
 }
 
+.shadow-default {
+    box-shadow: 2px 2px 21.6px 3px rgba(93, 93, 93, 0.12);
+    border-radius: 12px;
+}
+
 .back-button a {
     display: inline-flex;
     align-items: center;
@@ -62,11 +67,11 @@ body {
 }
 
 .section-header p {
-    margin-bottom: 0.29rem;
+    /* margin-bottom: 0.29rem; */
 }
 
 .section-header h1 {
-    margin-bottom: 1.14rem;
+    /* margin-bottom: 1.14rem; */
 }
 
 .section p {
@@ -97,4 +102,39 @@ body {
     font-size: 1.5rem;
     line-height: 1.4;
     font-weight: 400;
+}
+
+.image-grid {
+    display: flex;
+    gap: 2rem;
+    margin: 2rem 0;
+}
+
+.image-grid-item {
+    flex: 1;
+    max-height: 25rem;
+    overflow: hidden;
+}
+
+.image-grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.stacked-images {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    margin: 2rem 0;
+}
+
+.stacked-image-item {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.stacked-image-item p {
+    max-width: 80ch;
 }
